Fix import to support heroku deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: go
 go:
 - '1.10'
 - master
-go_import_path: github.com/ToDoist
+go_import_path: ToDoist
 script:
 - go test -v
 - go build
